// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useRemark should render content 1`] = `
<React.Fragment>
  <h1>
    header
  </h1>
</React.Fragment>
`;

exports[`useRemark should support custom element renderer 1`] = `
<React.Fragment>
  <h1>
    heading
  </h1>
</React.Fragment>
`;

exports[`useRemark should support gfm through remark plugins 1`] = `
<React.Fragment>
  <p>
    <a
      href="https://example.com"
    >
      https://example.com
    </a>
  </p>
</React.Fragment>
`;

exports[`useRemark should support html through rehype plugins 1`] = `
<React.Fragment>
  <p>
    <span>
      example
    </span>
  </p>
</React.Fragment>
`;

exports[`useRemark should support math through remark and rehype plugins 1`] = `
<React.Fragment>
  <p>
    Lift(
    <span
      className="math math-inline"
    >
      <span
        className="katex"
      >
        <span
          className="katex-mathml"
        >
          <math
            xmlns="http://www.w3.org/1998/Math/MathML"
          >
            <semantics>
              <mrow>
                <mi>
                  L
                </mi>
              </mrow>
              <annotation
                encoding="application/x-tex"
              >
                L
              </annotation>
            </semantics>
          </math>
        </span>
        <span
          aria-hidden="true"
          className="katex-html"
        >
          <span
            className="base"
          >
            <span
              className="strut"
              style={
                Object {
                  "height": "0.68333em",
                  "verticalAlign": "0em",
                }
              }
            />
            <span
              className="mord mathnormal"
            >
              L
            </span>
          </span>
        </span>
      </span>
    </span>
    ) can be determined by Lift Coefficient (
    <span
      className="math math-inline"
    >
      <span
        className="katex"
      >
        <span
          className="katex-mathml"
        >
          <math
            xmlns="http://www.w3.org/1998/Math/MathML"
          >
            <semantics>
              <mrow>
                <msub>
                  <mi>
                    C
                  </mi>
                  <mi>
                    L
                  </mi>
                </msub>
              </mrow>
              <annotation
                encoding="application/x-tex"
              >
                C_L
              </annotation>
            </semantics>
          </math>
        </span>
        <span
          aria-hidden="true"
          className="katex-html"
        >
          <span
            className="base"
          >
            <span
              className="strut"
              style={
                Object {
                  "height": "0.83333em",
                  "verticalAlign": "-0.15em",
                }
              }
            />
            <span
              className="mord"
            >
              <span
                className="mord mathnormal"
                style={
                  Object {
                    "marginRight": "0.07153em",
                  }
                }
              >
                C
              </span>
              <span
                className="msupsub"
              >
                <span
                  className="vlist-t vlist-t2"
                >
                  <span
                    className="vlist-r"
                  >
                    <span
                      className="vlist"
                      style={
                        Object {
                          "height": "0.32833099999999993em",
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "marginLeft": "-0.07153em",
                            "marginRight": "0.05em",
                            "top": "-2.5500000000000003em",
                          }
                        }
                      >
                        <span
                          className="pstrut"
                          style={
                            Object {
                              "height": "2.7em",
                            }
                          }
                        />
                        <span
                          className="sizing reset-size6 size3 mtight"
                        >
                          <span
                            className="mord mathnormal mtight"
                          >
                            L
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      className="vlist-s"
                    >
                      ​
                    </span>
                  </span>
                  <span
                    className="vlist-r"
                  >
                    <span
                      className="vlist"
                      style={
                        Object {
                          "height": "0.15em",
                        }
                      }
                    >
                      <span />
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </span>
    ) like the following equation.
  </p>
</React.Fragment>
`;
